Added: - Retrofit - Hilt
Services
- Api service
- Reservas Service

Repositories
- ApiRepository

Modules
- ServiceModule
- RepositoryModule
- NetworkModule

Activities
- ReservasActivity
- Reservas Intent

Config
- Support http
- Domains localhost/ local ip